# Star

./: .gitignore  AdvancedStealer.cpp  BRANCH_STYLE_PLUGINS_README.md  BUG_FIXES.md  C:\Users\Garre\source\repos\VS2022Encryptor\.gitignore  C:\Users\Garre\source\repos\VS2022Encryptor\README.md  C:\Users\Garre\source\repos\VS2022Encryptor\VS2022Encryptor\build.bat  C:\Users\Garre\source\repos\VS2022Encryptor\VS2022Encryptor\main.cpp  C:\Users\Garre\source\repos\VS2022Encryptor\VS2022Encryptor\pe_encryptor.cpp  C:\Users\Garre\source\repos\VS2022Encryptor\VS2022Encryptor\stealth_triple_encryptor.h  C:\Users\Garre\source\repos\VS2022Encryptor\VS2022Encryptor\test_example.txt  C:\Users\Garre\source\repos\VS2022Encryptor\vs2022_encryptor.sln  CHACHA20_SUMMARY.md  DemoBot_bot  DemoBot_bot.cpp  Direct_PE_TripleEncryptor.cpp  HOW_TO_GUIDE.md  MIRC_TEST_FILES_SUMMARY.md  Makefile  NON_DISTRIBUTABLE_SCANNERS.md  PLUGIN_SYSTEM_DOCS.md  PROJECT_SUMMARY.md  README.md  README_ADVANCED_PACKER.md  README_CHACHA20.md  README_NATIVE.md  README_STUB_GENERATOR.md  README_Workflow.md  README_generators.md  Resource.h  STEALTH_ACHIEVEMENTS.md  Star.cpp  Star.rc  Star.sln  Star.vcxproj  Star.vcxproj.filters  StarBot_bot  StarBot_bot.cpp  USAGE_GUIDE.md  VIRUSTOTAL_TEST_SUMMARY.md  (+481 more)
DragDropEncryptor/: DragDropEncryptor.pro  mainwindow.cpp  mainwindow.h
NativeStubGenGUI/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Rawr/: CMakeLists.txt  LICENSE  QUICKSTART.md  README.md  main.cpp
Rawr/configs/: core_config.yaml
Rawr/core/framework/: unified_framework.h
Rawr/documentation/learning_paths/: cybersecurity_roadmap.md
Rawr/plugins/time_manipulator/: time_manipulator.h
Rawr/scripts/: build.sh
Star/: Star.cpp
UPX_Style_Encryptor/: README.md  VS2022_MenuEncryptor.cpp  build.bat
VS2022Encryptor/: .gitignore  README.md  VS2022Encryptor.vcxproj  build.bat  encryptor.h  encryptor_stub_generator.cpp  encryptor_stub_generator.h  main.cpp  pe_encryptor.cpp  pe_encryptor.h  self_contained_pe_encryptor.h  stealth_triple_encryptor.cpp  stealth_triple_encryptor.h  test_example.txt  unlimited_stub_generator.cpp  unlimited_stub_generator.h  xll_stub_generator.cpp  xll_stub_generator.h
agent_generated_files/: README.md  analysis_report.md  merge_script.sh
auto_code_generator/: MANIFEST.in  README.md  pyproject.toml
auto_code_generator/auto_code_generator/: cli.py  core.py
auto_code_generator/auto_code_generator/templates/asm/: masm_hello.asm.tmpl  masm_track.asm.tmpl  nasm_hello.asm.tmpl  nasm_track.asm.tmpl  tasm_hello.asm.tmpl
auto_code_generator/auto_code_generator/templates/c/: hello.c.tmpl  tracking.c.tmpl
auto_code_generator/auto_code_generator/templates/cpp/: hello.cpp.tmpl  tracking.cpp.tmpl
auto_code_generator/auto_code_generator/templates/javascript/: util.js.tmpl
auto_code_generator/auto_code_generator/templates/python/: class.py.tmpl  function.py.tmpl
auto_code_generator/out_sub/: function-ce4e7a1b.py  hello.c  hello.cpp  tracking.cpp  util.js
auto_code_generator/out_whole/: class-1cf93ce5.py  class-b454e782.py  class.py  hello.c  hello.cpp  masm-hello.asm  nasm-hello.asm  nasm-track.asm  tasm-hello-7914fe6d.asm  tracking.c
autocode/: __init__.py  agent.py  cli.py  executor.py  fs.py  types.py
autonomous-code-generator/: C_CPP_ASM_README.md  QUICKSTART.md  README.md  requirements.txt  setup.py  simple_test.py  test_c_cpp_asm.py  test_generator.py  test_lowlevel.py
chrome_extension/: background.js  manifest.json  options.html  popup.html  popup.js
completed_projects/: Makefile  hello_world_1.cpp
enhanced_stubs/: test_0  test_0.cpp  test_1.cpp  test_2.cpp  test_3.cpp  test_4.cpp
final_101_stubs/: final_hashes.txt  unique_stub_0.cpp  unique_stub_1.cpp  unique_stub_10.cpp  unique_stub_100.cpp  unique_stub_11.cpp  unique_stub_12.cpp  unique_stub_13.cpp  unique_stub_14.cpp  unique_stub_15.cpp  unique_stub_16.cpp  unique_stub_17.cpp  unique_stub_18.cpp  unique_stub_19.cpp  unique_stub_2.cpp  unique_stub_20.cpp  unique_stub_21.cpp  unique_stub_22.cpp  unique_stub_23.cpp  unique_stub_24.cpp  unique_stub_25.cpp  unique_stub_26.cpp  unique_stub_27.cpp  unique_stub_28.cpp  unique_stub_29.cpp  unique_stub_3.cpp  unique_stub_30.cpp  unique_stub_31.cpp  unique_stub_32.cpp  unique_stub_33.cpp  unique_stub_34.cpp  unique_stub_35.cpp  unique_stub_36.cpp  unique_stub_37.cpp  unique_stub_38.cpp  unique_stub_39.cpp  unique_stub_4.cpp  unique_stub_40.cpp  unique_stub_41.cpp  unique_stub_42.cpp  (+62 more)
generated_code/: generated_0.cpp  generated_1.cpp
js_generated/: BUILD.md  README.md  generation_metadata.txt  package.json  test_Ecommerce.js
mirc_test_results/: enhanced_Assist_stub_0.cpp  enhanced_Assist_stub_1.cpp  enhanced_Crash_stub_0.cpp  enhanced_Crash_stub_1.cpp  enhanced_Exit_stub_0.cpp  enhanced_Exit_stub_1.cpp  enhanced_Freeze_stub_0.cpp  enhanced_Freeze_stub_1.cpp  fileless_stub.cpp  no_limit_stub_0.cpp  no_limit_stub_1.cpp  no_limit_stub_2.cpp  no_limit_stub_3.cpp  no_limit_stub_4.cpp  stub_hashes.txt
native_host/: Makefile  com.self_learning_agent.json  host.cpp  windows_register.reg
plugins/: aes_plugin.cpp  chacha20_plugin.cpp  xor_plugin.cpp
poc-scroll-wheel/: README.md  index-inline.html  index.html  script.js  styles.css  wheel.html
self_learning_agent/: Makefile  README.md  cli.py  core.py  requirements.txt
stub_test_results/: final_test_summary.txt  linked_1.cpp  linked_16.cpp  linked_25.cpp  linked_6.cpp  linked_unique_1.cpp  linked_unique_10.cpp  linked_unique_15.cpp  linked_unique_20.cpp  linked_unique_25.cpp  linked_unique_5.cpp  stub_1.cpp  stub_10.cpp  stub_11.cpp  stub_12.cpp  stub_13.cpp  stub_14.cpp  stub_15.cpp  stub_16.cpp  stub_17.cpp  stub_18.cpp  stub_19.cpp  stub_2.cpp  stub_20.cpp  stub_21.cpp  stub_22.cpp  stub_23.cpp  stub_24.cpp  stub_25.cpp  stub_3.cpp  stub_4.cpp  stub_5.cpp  stub_6.cpp  stub_7.cpp  stub_8.cpp  stub_9.cpp  test_summary.txt
stubs_output/: generation_report.txt  hashes.txt  stub_0.cpp  stub_1.cpp  stub_10.cpp  stub_100.cpp  stub_11.cpp  stub_12.cpp  stub_13.cpp  (+94 more)
(+86 files in other folders)
